added game component

--- a/server/views/games/index.ejs
+++ b/server/views/games/index.ejs
@@ -36,6 +36,15 @@
       </div>
     </div>
 
+    <my-app>
+
+    <games></games>
+
+    </my-app>
+
+
+
+<% include ../partials/angular.ejs %>
 <% include ../partials/footer.ejs %>
 
 
